Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/zzzz_in_arbeit/h/gstevent.h

typedef struct _GstEvent GstEvent;
typedef enum {
  GST_EVENT_TYPE_UPSTREAM       = 1 << 0,
  GST_EVENT_TYPE_DOWNSTREAM     = 1 << 1,
  GST_EVENT_TYPE_SERIALIZED     = 1 << 2,
  GST_EVENT_TYPE_STICKY         = 1 << 3,
  GST_EVENT_TYPE_STICKY_MULTI   = 1 << 4
} GstEventTypeFlags;
#define GST_EVENT_NUM_SHIFT     (8)
#define GST_EVENT_MAKE_TYPE(num,flags) \
    (((num) << GST_EVENT_NUM_SHIFT) | (flags))
typedef enum {
  GST_EVENT_UNKNOWN               = GST_EVENT_MAKE_TYPE (0, 0),
  GST_EVENT_FLUSH_START           = GST_EVENT_MAKE_TYPE (10, _FLAG(BOTH)),
  GST_EVENT_FLUSH_STOP            = GST_EVENT_MAKE_TYPE (20, _FLAG(BOTH) | _FLAG(SERIALIZED)),
  GST_EVENT_STREAM_START          = GST_EVENT_MAKE_TYPE (40, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY)),
  GST_EVENT_CAPS                  = GST_EVENT_MAKE_TYPE (50, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY)),
  GST_EVENT_SEGMENT               = GST_EVENT_MAKE_TYPE (70, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY)),
  GST_EVENT_STREAM_COLLECTION     = GST_EVENT_MAKE_TYPE (75, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY) | _FLAG(STICKY_MULTI)),
  GST_EVENT_TAG                   = GST_EVENT_MAKE_TYPE (80, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY) | _FLAG(STICKY_MULTI)),
  GST_EVENT_BUFFERSIZE            = GST_EVENT_MAKE_TYPE (90, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY)),
  GST_EVENT_SINK_MESSAGE          = GST_EVENT_MAKE_TYPE (100, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY) | _FLAG(STICKY_MULTI)),
  GST_EVENT_STREAM_GROUP_DONE     = GST_EVENT_MAKE_TYPE (105, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY)),
  GST_EVENT_EOS                   = GST_EVENT_MAKE_TYPE (110, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY)),
  GST_EVENT_TOC                   = GST_EVENT_MAKE_TYPE (120, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY) | _FLAG(STICKY_MULTI)),
  GST_EVENT_PROTECTION            = GST_EVENT_MAKE_TYPE (130, _FLAG (DOWNSTREAM) | _FLAG (SERIALIZED) | _FLAG (STICKY) | _FLAG (STICKY_MULTI)),
  GST_EVENT_SEGMENT_DONE          = GST_EVENT_MAKE_TYPE (150, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED)),
  GST_EVENT_GAP                   = GST_EVENT_MAKE_TYPE (160, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED)),
  GST_EVENT_INSTANT_RATE_CHANGE   = GST_EVENT_MAKE_TYPE (180, _FLAG(DOWNSTREAM) | _FLAG(STICKY)),
  GST_EVENT_QOS                    = GST_EVENT_MAKE_TYPE (190, _FLAG(UPSTREAM)),
  GST_EVENT_SEEK                   = GST_EVENT_MAKE_TYPE (200, _FLAG(UPSTREAM)),
  GST_EVENT_NAVIGATION             = GST_EVENT_MAKE_TYPE (210, _FLAG(UPSTREAM)),
  GST_EVENT_LATENCY                = GST_EVENT_MAKE_TYPE (220, _FLAG(UPSTREAM)),
  GST_EVENT_STEP                   = GST_EVENT_MAKE_TYPE (230, _FLAG(UPSTREAM)),
  GST_EVENT_RECONFIGURE            = GST_EVENT_MAKE_TYPE (240, _FLAG(UPSTREAM)),
  GST_EVENT_TOC_SELECT             = GST_EVENT_MAKE_TYPE (250, _FLAG(UPSTREAM)),
  GST_EVENT_SELECT_STREAMS         = GST_EVENT_MAKE_TYPE (260, _FLAG(UPSTREAM)),
  GST_EVENT_INSTANT_RATE_SYNC_TIME = GST_EVENT_MAKE_TYPE (261, _FLAG(UPSTREAM)),
  GST_EVENT_CUSTOM_UPSTREAM          = GST_EVENT_MAKE_TYPE (270, _FLAG(UPSTREAM)),
  GST_EVENT_CUSTOM_DOWNSTREAM        = GST_EVENT_MAKE_TYPE (280, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED)),
  GST_EVENT_CUSTOM_DOWNSTREAM_OOB    = GST_EVENT_MAKE_TYPE (290, _FLAG(DOWNSTREAM)),
  GST_EVENT_CUSTOM_DOWNSTREAM_STICKY = GST_EVENT_MAKE_TYPE (300, _FLAG(DOWNSTREAM) | _FLAG(SERIALIZED) | _FLAG(STICKY) | _FLAG(STICKY_MULTI)),
  GST_EVENT_CUSTOM_BOTH              = GST_EVENT_MAKE_TYPE (310, _FLAG(BOTH) | _FLAG(SERIALIZED)),
  GST_EVENT_CUSTOM_BOTH_OOB          = GST_EVENT_MAKE_TYPE (320, _FLAG(BOTH))
} GstEventType;
typedef enum {
  GST_STREAM_FLAG_NONE,
  GST_STREAM_FLAG_SPARSE       = (1 << 0),
  GST_STREAM_FLAG_SELECT       = (1 << 1),
  GST_STREAM_FLAG_UNSELECT     = (1 << 2)
} GstStreamFlags;
extern GType _gst_event_type;
#define GST_TYPE_EVENT                  (_gst_event_type)
#define GST_IS_EVENT(obj)               (GST_IS_MINI_OBJECT_TYPE (obj, GST_TYPE_EVENT))
#define GST_EVENT_CAST(obj)             ((GstEvent *)(obj))
#define GST_EVENT(obj)                  (GST_EVENT_CAST(obj))
#define GST_EVENT_TYPE(event)           (GST_EVENT_CAST(event)->type)
#define GST_EVENT_TYPE_NAME(event)      (gst_event_type_get_name(GST_EVENT_TYPE(event)))
#define GST_EVENT_TIMESTAMP(event)      (GST_EVENT_CAST(event)->timestamp)
#define GST_EVENT_SEQNUM(event)         (GST_EVENT_CAST(event)->seqnum)
#define GST_EVENT_IS_UPSTREAM(ev)       !!(GST_EVENT_TYPE (ev) & GST_EVENT_TYPE_UPSTREAM)
#define GST_EVENT_IS_DOWNSTREAM(ev)     !!(GST_EVENT_TYPE (ev) & GST_EVENT_TYPE_DOWNSTREAM)
#define GST_EVENT_IS_SERIALIZED(ev)     !!(GST_EVENT_TYPE (ev) & GST_EVENT_TYPE_SERIALIZED)
#define GST_EVENT_IS_STICKY(ev)     !!(GST_EVENT_TYPE (ev) & GST_EVENT_TYPE_STICKY)
extern
GstEvent *  gst_event_make_writable (GstEvent * event) ;
extern
gboolean    gst_event_is_writable   (const GstEvent * event);
typedef enum {
  GST_QOS_TYPE_OVERFLOW        = 0,
  GST_QOS_TYPE_UNDERFLOW       = 1,
  GST_QOS_TYPE_THROTTLE        = 2
} GstQOSType;
typedef enum {
  GST_GAP_FLAG_MISSING_DATA = (1<<0),
} GstGapFlags;
extern
const gchar*    gst_event_type_get_name         (GstEventType type);
extern
GQuark          gst_event_type_to_quark         (GstEventType type);
extern
GstEventTypeFlags
                gst_event_type_get_flags        (GstEventType type);
extern
guint gst_event_type_to_sticky_ordering (GstEventType type) ;
extern
GstEvent *      gst_event_ref                   (GstEvent * event);
extern
void            gst_event_unref                 (GstEvent * event);
extern
void            gst_clear_event                 (GstEvent ** event_ptr);
extern
GstEvent *      gst_event_copy                  (const GstEvent * event) ;
extern
GType           gst_event_get_type              (void);
extern
GstEvent*       gst_event_new_custom            (GstEventType type, GstStructure *structure)  ;
extern
const GstStructure *
                gst_event_get_structure         (GstEvent *event);
extern
GstStructure *  gst_event_writable_structure    (GstEvent *event);
extern
gboolean        gst_event_has_name              (GstEvent *event, const gchar *name);
extern 
gboolean        gst_event_has_name_id           (GstEvent *event, GQuark name);
extern
guint32         gst_event_get_seqnum            (GstEvent *event);
extern
void            gst_event_set_seqnum            (GstEvent *event, guint32 seqnum);
extern
gint64          gst_event_get_running_time_offset (GstEvent *event);
extern
void            gst_event_set_running_time_offset (GstEvent *event, gint64 offset);
extern
GstEvent *      gst_event_new_stream_start      (const gchar *stream_id)  ;
extern
void            gst_event_parse_stream_start    (GstEvent *event, const gchar **stream_id);
extern
void            gst_event_set_stream		(GstEvent *event, GstStream *stream);
extern
void            gst_event_parse_stream		(GstEvent *event, GstStream **stream);
extern
void            gst_event_set_stream_flags      (GstEvent *event, GstStreamFlags flags);
extern
void            gst_event_parse_stream_flags    (GstEvent *event, GstStreamFlags *flags);
extern
void            gst_event_set_group_id          (GstEvent *event, guint group_id);
extern
gboolean        gst_event_parse_group_id        (GstEvent *event, guint *group_id);
extern
GstEvent *      gst_event_new_flush_start       (void)  ;
extern
GstEvent *      gst_event_new_flush_stop        (gboolean reset_time)  ;
extern
void            gst_event_parse_flush_stop      (GstEvent *event, gboolean *reset_time);
extern
GstEvent *      gst_event_new_stream_collection   (GstStreamCollection *collection)  ;
extern
void            gst_event_parse_stream_collection (GstEvent *event, GstStreamCollection **collection);
extern
GstEvent *      gst_event_new_select_streams    (GList *streams) ;
extern
void            gst_event_parse_select_streams  (GstEvent *event, GList **streams);
extern
GstEvent *      gst_event_new_stream_group_done (guint group_id)  ;
extern
void            gst_event_parse_stream_group_done (GstEvent *event, guint *group_id);
extern
GstEvent *      gst_event_new_eos               (void)  ;
extern
GstEvent *      gst_event_new_gap               (GstClockTime   timestamp,
                                                 GstClockTime   duration)  ;
extern
void            gst_event_parse_gap             (GstEvent     * event,
                                                 GstClockTime * timestamp,
                                                 GstClockTime * duration);
extern
void            gst_event_set_gap_flags           (GstEvent    * event,
                                                   GstGapFlags   flags);
extern
void            gst_event_parse_gap_flags         (GstEvent    * event,
                                                   GstGapFlags * flags);
extern
GstEvent *      gst_event_new_caps              (GstCaps *caps)  ;
extern
void            gst_event_parse_caps            (GstEvent *event, GstCaps **caps);
extern
GstEvent*       gst_event_new_segment           (const GstSegment *segment)  ;
extern
void            gst_event_parse_segment         (GstEvent *event, const GstSegment **segment);
extern
void            gst_event_copy_segment          (GstEvent *event, GstSegment *segment);
extern
GstEvent*       gst_event_new_tag               (GstTagList *taglist)  ;
extern
void            gst_event_parse_tag             (GstEvent *event, GstTagList **taglist);
extern
GstEvent*      gst_event_new_toc                (GstToc *toc, gboolean updated) ;
extern
void           gst_event_parse_toc              (GstEvent *event, GstToc **toc, gboolean *updated);
extern
GstEvent *     gst_event_new_protection         (const gchar * system_id, GstBuffer * data, const gchar * origin) ;
extern
void           gst_event_parse_protection       (GstEvent * event, const gchar ** system_id,
                                                 GstBuffer ** data, const gchar ** origin);
extern
GstEvent *      gst_event_new_buffer_size       (GstFormat format, gint64 minsize, gint64 maxsize,
                                                 gboolean async)  ;
extern
void            gst_event_parse_buffer_size     (GstEvent *event, GstFormat *format, gint64 *minsize,
                                                 gint64 *maxsize, gboolean *async);
extern
GstEvent*       gst_event_new_sink_message      (const gchar *name, GstMessage *msg)  ;
extern
void            gst_event_parse_sink_message    (GstEvent *event, GstMessage **msg);
extern
GstEvent*       gst_event_new_qos               (GstQOSType type, gdouble proportion,
                                                 GstClockTimeDiff diff, GstClockTime timestamp)  ;
extern
void            gst_event_parse_qos             (GstEvent *event, GstQOSType *type,
                                                 gdouble *proportion, GstClockTimeDiff *diff,
                                                 GstClockTime *timestamp);
extern
GstEvent*       gst_event_new_seek              (gdouble rate, GstFormat format, GstSeekFlags flags,
                                                 GstSeekType start_type, gint64 start,
                                                 GstSeekType stop_type, gint64 stop)  ;
extern
void            gst_event_parse_seek            (GstEvent *event, gdouble *rate, GstFormat *format,
                                                 GstSeekFlags *flags,
                                                 GstSeekType *start_type, gint64 *start,
                                                 GstSeekType *stop_type, gint64 *stop);
extern
void            gst_event_set_seek_trickmode_interval (GstEvent *event, GstClockTime interval);
extern
void            gst_event_parse_seek_trickmode_interval (GstEvent *event, GstClockTime *interval);
extern
GstEvent*       gst_event_new_navigation        (GstStructure *structure)  ;
extern
GstEvent*       gst_event_new_latency           (GstClockTime latency)  ;
extern
void            gst_event_parse_latency         (GstEvent *event, GstClockTime *latency);
extern
GstEvent*       gst_event_new_step              (GstFormat format, guint64 amount, gdouble rate,
                                                 gboolean flush, gboolean intermediate)  ;
extern
void            gst_event_parse_step            (GstEvent *event, GstFormat *format, guint64 *amount,
                                                 gdouble *rate, gboolean *flush, gboolean *intermediate);
extern
GstEvent*       gst_event_new_reconfigure       (void)  ;
extern
GstEvent*       gst_event_new_toc_select        (const gchar *uid)  ;
extern
void            gst_event_parse_toc_select      (GstEvent *event, gchar **uid);
extern
GstEvent*       gst_event_new_segment_done      (GstFormat format, gint64 position)  ;
extern
void            gst_event_parse_segment_done    (GstEvent *event, GstFormat *format, gint64 *position);
extern
GstEvent *      gst_event_new_instant_rate_change   (gdouble rate_multiplier, GstSegmentFlags new_flags)  ;
extern
void            gst_event_parse_instant_rate_change (GstEvent *event,
                                                     gdouble  *rate_multiplier, GstSegmentFlags *new_flags);
extern
GstEvent *      gst_event_new_instant_rate_sync_time   (gdouble      rate_multiplier,
                                                        GstClockTime running_time,
                                                        GstClockTime upstream_running_time)  ;
extern
void            gst_event_parse_instant_rate_sync_time (GstEvent     *event,
                                                        gdouble      *rate_multiplier,
                                                        GstClockTime *running_time,
                                                        GstClockTime *upstream_running_time);